fix bottom whitespace

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -261,7 +261,7 @@ body,
 /* FOOTER */
 #footer-section {
   padding: 40px;
-  margin-top: 0;
+  margin: 0;
   background-color: $color-tertiary;
   color: $footer-text;
   border-radius: 0;
